<resources>
    <string name="app_name">EloSort</string>
    <string name="create_new">New List</string>
    <string name="open_existing">Open Existing List</string>
    <string name="select_pictures">Select Pictures</string>
    <string name="take_picture">Take Picture</string>
    <string name="done">Done</string>
    <string name="picture_gallery">Pictures Gallery</string>
    <string name="edit_list">Edit List</string>
    <string name="see_rank">Rankings</string>
    <string name="play_list">Sort List</string>
    <string name="nothing_selected">Nothing was selected</string>
    <string name="something_bad">Something went wrong</string>
    <string name="list_name_default">your list name goes here</string>
    <string name="unfinished_folder_name">unfinished_list_name</string>
    <string name="list_name_exists">List name exists already</string>
    <string name="title_activity_camera_preview">CameraPreviewActivity</string>
    <string name="gallery_image_item_content_desc">gallery image item</string>
    <string name="delete_button">Deletes gallery item</string>
    <string name="items_deleted_desc">items deleted</string>
    <string name="list_name_empty">List name cannot be empty</string>
    <string name="title_activity_ranking">MainActivity</string>
    <string name="skip">Skip</string>
    <string name="rank_instructions">Click on the image that you prefer</string>
    <string name="rank_image_button_desc">Item image selection</string>
    <string name="need_more_than_one_item">More than one item is needed to rank</string>
    <string name="close_list">Exit</string>
    <string name="title_edit">Edit List</string>
    <string name="title_new_list">New List</string>
    <string name="title_open_existing">Open Existing List</string>
    <string name="title_ranking">Rankings</string>
    <string name="title_sorting">Sort List</string>
    <string name="title_gallery">Gallery</string>
</resources>